welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:13: error: not found: value c
    if (couleur==c) {
                 ^