welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
     // Write your code here
 }

def isFacingTrail():Boolean = {
  var couleur=Color.red
  if (estFaceMur()==false) {
    avance;
    getCouleurSol;
    couleur=getCouleurSol
    recule;
    if (couleur==c) {
      return true
    } else {
      return false
    }
  }
  return false
}